<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourOldEmail"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/black"
            android:backgroundTint="@color/bluegray"
            />

        <EditText
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterNewEmail"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/black"
            android:backgroundTint="@color/bluegray"
            />

        <EditText
            android:id="@+id/confirm_newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmNewEmail"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/black"
            android:backgroundTint="@color/bluegray"
            />

        <EditText
            android:id="@+id/current_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourCurrentPassword"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:backgroundTint="@color/bluegray"
            />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="change"
            android:textColor="@color/white"
            android:background="@color/button"
            android:textAllCaps="true"/>



    </LinearLayout>

</LinearLayout>